--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -63,7 +63,7 @@ common.link.other.help: https://www.exemple.com/
 common.more_stacks: Plus de stacks
 common.more_techs: Plus de techs
 common.new_stack: Créer une stack
-common.new_tech: Créer une tech
+common.new_tech: Créer une technologie
 common.stacks: Stacks
 common.go_back: Retour en arrière
 common.delete.cannot_be_undone: Cette action est irréversible.
@@ -72,6 +72,7 @@ common.author: Créateur
 # Icons
 icon.eye: Afficher
 icon.pencil: Modifier
+icon.add_circle: Ajouter
 
 # Flashes
 ## Common
@@ -373,10 +374,14 @@ page.create_stack.description: Selectionner les attributs de votre nouvelle stac
 
 ## Edit Stack
 page.edit_stack.title: Paramètres de { name }
+page.edit_stack.see: Voir la stack
 
 ## Delete
 page.stack_delete.title: Supprimer la stack
 page.stack_delete.content: Voulez-vous vraiment supprimer cette stack ?
+
+## Edit Tech
+page.edit_tech.see: Voir la technologie
 
 ### Delete Tech
 page.tech_delete.title: Supprimer la tech
