--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -68,6 +68,8 @@ common.stacks: Stacks
 common.go_back: Retour en arrière
 common.delete.cannot_be_undone: Cette action est irréversible.
 common.author: Créateur
+common.created_at: Créé le
+common.updated_at: Mis à jour le
 
 # Icons
 icon.eye: Afficher
