--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -370,7 +370,34 @@ page.create_tech.add_category: Add a new category
 page.create_tech.add_category.description: Can't find the category you want? Then add a new one!
 page.create_tech.add_category.no_script: Attention. Submitting this form will reload the page as Javascript is not available. Make sure to save your change.
 
-## Create stack
+## Review and publish
+page.review_and_publish.title: Step 3 - Review and Publish
+page.review_and_publish.description: Review your tech before publishing it.
+page.review_and_publish.guide: This is the last step! Review your tech and when you think you're ready, publish it! You can come back here any time, your tech has been saved.
+page.review_and_publish.publish: Publish
+
+## Techs
+page.techs.title: Techs
+page.techs.description: Find the techs you need for your next stack here.
+
+## Show Tech
+page.show_tech.default_description: Everything you need to know about { name }.
+
+## Edit Tech
+page.edit_tech.see: See tech
+
+## Delete Tech
+page.tech_delete.title: Delete tech
+page.tech_delete.content: Are you sure you want to delete this tech ?
+
+## Stacks
+page.stacks.title: Stacks
+page.stacks.description: Find the stack you are looking for here.
+
+## Show Stack
+page.show_stack.default_description: Find out what techs { name } is using and why.
+
+## Create Stack
 page.create_stack.title: Create a stack
 page.create_stack.description: Select the attributes of your new stack.
 
@@ -381,19 +408,6 @@ page.edit_stack.see: See stack
 ## Delete Stack
 page.stack_delete.title: Delete stack
 page.stack_delete.content: Are you sure you want to delete this stack ?
-
-## Edit Tech
-page.edit_tech.see: See tech
-
-## Delete Tech
-page.tech_delete.title: Delete tech
-page.tech_delete.content: Are you sure you want to delete this tech ?
-
-## Review and publish
-page.review_and_publish.title: Step 3 - Review and Publish
-page.review_and_publish.description: Review your tech before publishing it.
-page.review_and_publish.guide: This is the last step! Review your tech and when you think you're ready, publish it! You can come back here any time, your tech has been saved.
-page.review_and_publish.publish: Publish
 
 # Entities
 ## User
